--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ test-regular:
     - docker run -t --label job=${CI_JOB_NAME} ${CI_REGISTRY_IMAGE} src/create_image.py -o ${CI_JOB_NAME}.png
     - CID=`docker ps -q -l -f "ancestor=${CI_REGISTRY_IMAGE}" -f "label=job=${CI_JOB_NAME}"`
     - docker wait ${CID}
-    - docker cp ${CID}:/opt/e-ink_weather/${CI_JOB_NAME}.png .
+    - docker cp ${CID}:/opt/kindle_weather/${CI_JOB_NAME}.png .
 
   artifacts:
     paths:
